manifests/workloads/jenkins/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: utility
  name: utility
