manifests/workloads/jenkins/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-robotwizard-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.robotwizard.co.uk
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: jenkins-ce
spec:
  type: ExternalName
  externalName: traefik.robotwizard.co.uk
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-robotwizard-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-robotwizard-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
  tls:
    secretName: jenkins-robotwizard-cert
